Fix the size of the arrow, so the inner tab list doesn't jump around.

--- a/public/less/tabs.less
+++ b/public/less/tabs.less
@@ -70,6 +70,10 @@
       border-bottom: 2px solid #eee;
       padding-bottom: 5px;
     }
+    .tab-arrow {
+      margin-left: 10px;
+      width: 12px;
+    }
   }
 
   .tab-container {
